# mqtt-lib

./: AUTHENTICATION.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  QUIC_IMPLEMENTATION_SPEC.md  README.md
.github/workflows/: conformance.yml  docker.yml  rust.yml
crates/mqtt5/: Cargo.toml  README.md
crates/mqtt5-conformance/: BROKER_SETUP.md  CONFORMANCE_DIARY.md  Cargo.toml  README.md  profiles.toml
crates/mqtt5-conformance-cli/: Cargo.toml  README.md
crates/mqtt5-conformance-cli/src/: main.rs
crates/mqtt5-conformance-macros/: Cargo.toml  README.md
crates/mqtt5-conformance-macros/src/: lib.rs
crates/mqtt5-conformance/src/: assertions.rs  capabilities.rs  lib.rs  packet_parser.rs  raw_client.rs  registry.rs  skip.rs  sut.rs  transport.rs
crates/mqtt5-conformance/src/conformance_tests/: mod.rs  section1_data_repr.rs  section3_connack.rs  section3_connect.rs  section3_connect_extended.rs  section3_disconnect.rs  section3_final_conformance.rs  section3_ping.rs  section3_publish.rs  section3_publish_advanced.rs  section3_publish_alias.rs  section3_publish_flow.rs  section3_qos_ack.rs  section3_subscribe.rs  section3_unsubscribe.rs  section4_enhanced_auth.rs  section4_error_handling.rs  section4_flow_control.rs  section4_qos.rs  section4_shared_sub.rs  section4_topic.rs  section6_websocket.rs
crates/mqtt5-conformance/src/test_client/: inprocess.rs  mod.rs  raw.rs
crates/mqtt5-conformance/tests/: section3_connack.rs  section3_publish_flow.rs  section3_subscribe.rs  section4_enhanced_auth.rs
crates/mqtt5-conformance/tests/fixtures/: emqx.toml  external-mqtt5.toml  hivemq-ce.toml  inprocess.toml  mosquitto-2.x.toml
crates/mqtt5-protocol/: README.md
crates/mqtt5-protocol/src/: error_classification.rs  lib.rs  quic_error_codes.rs
crates/mqtt5-protocol/src/protocol/v5/: reason_codes.rs
crates/mqtt5-wasi/: Cargo.toml  README.md
crates/mqtt5-wasi/bench/: Cargo.toml
crates/mqtt5-wasi/bench/src/: main.rs
crates/mqtt5-wasi/scripts/: bench.sh
crates/mqtt5-wasi/src/: broker.rs  config.rs  decoder.rs  executor.rs  lib.rs  timer.rs  transport.rs
crates/mqtt5-wasi/src/client/: mod.rs  publish.rs  subscribe.rs
crates/mqtt5-wasi/src/client_handler/: connect.rs  lifecycle.rs  mod.rs  publish.rs  subscribe.rs
crates/mqtt5-wasm/: Cargo.toml  README.md
crates/mqtt5-wasm/src/client_handler/: connect.rs  mod.rs  subscribe.rs
crates/mqtt5/examples/: broker_with_opentelemetry.rs
crates/mqtt5/src/: callback.rs  transport.rs
crates/mqtt5/src/broker/: quic_acceptor.rs  router.rs  server.rs  server_stream_manager.rs
crates/mqtt5/src/broker/client_handler/: connect.rs  mod.rs  publish.rs  subscribe.rs
crates/mqtt5/src/broker/storage/: file_backend.rs  mod.rs  tests.rs
crates/mqtt5/src/client/: inner.rs  state.rs
crates/mqtt5/src/client/direct/: keepalive.rs  mod.rs  reader.rs
crates/mqtt5/src/telemetry/: metrics.rs  mod.rs
crates/mqtt5/src/transport/: quic.rs  quic_error.rs
crates/mqtt5/tests/: broker_bridge_integration.rs  broker_quic_integration.rs  change_only_delivery.rs  integration_no_local.rs  integration_reconnection.rs  integration_retain_as_published.rs  quic_migration_tests.rs  shared_subscription_basic.rs  turmoil_multi_client.rs  turmoil_pubsub.rs  turmoil_shared_subscriptions.rs  wss_alpn_integration.rs
crates/mqtt5/tests/common/: mod.rs
crates/mqttv5-cli/: CLI_USAGE.md  Cargo.toml  README.md
crates/mqttv5-cli/src/: main.rs
crates/mqttv5-cli/src/commands/: bench_cmd.rs  broker_cmd.rs  pub_cmd.rs  sub_cmd.rs
publications/comnet/experiments/analysis/: subscriber_flow_analysis.py
publications/comnet/experiments/parallel/: 07_subscriber_flow_delivery.sh
publications/subscriber-hoc/experiments/analysis/: REPORT.md  subscriber_flow_analysis.py
publications/subscriber-hoc/experiments/analysis/figures/: fig01_spread_vs_loss.py  fig02_spike_isolation.py  fig03_latency_percentiles.py  generate_all.py  style.py
publications/subscriber-hoc/experiments/monitor/: client_monitor.sh  resource_monitor.sh
publications/subscriber-hoc/experiments/parallel/: 01_subscriber_flow_delivery.sh  common_parallel.sh  group1.env  run.sh
