[workspace]
members = [
    "crates/mqtt5-protocol",
    "crates/mqtt5",
    "crates/mqtt5-wasm",
    "crates/mqtt5-wasi",
    "crates/mqttv5-cli",
    "crates/mqtt5-conformance",
]
resolver = "2"

[workspace.package]
version = "0.13.0"
edition = "2021"
rust-version = "1.88"
authors = ["fabriciobracht <fabricio@bracht.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LabOverWire/mqtt-lib"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.dev]
debug = true

[profile.profiling]
inherits = "release"
debug = 2
lto = false

[patch.crates-io]
mqtt5-protocol = { path = "crates/mqtt5-protocol" }
mqtt5 = { path = "crates/mqtt5" }
