[package]
name = "mqtt5-conformance-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "CLI runner for the MQTT v5 conformance test suite"

[[bin]]
name = "mqtt5-conformance"
path = "src/main.rs"

[dependencies]
futures-util = "0.3.32"
libtest-mimic = "0.8.2"
mqtt5-conformance = { version = "0.1.0", path = "../mqtt5-conformance" }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
