[package]
name = "mqtt5-conformance"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "MQTT v5.0 OASIS specification conformance test suite"

[lib]
name = "mqtt5_conformance"
path = "src/lib.rs"

[features]
default = ["inprocess-fixture"]
inprocess-fixture = ["dep:mqtt5"]

[dependencies]
mqtt5 = { path = "../mqtt5", optional = true }
mqtt5-protocol = { path = "../mqtt5-protocol" }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
bytes = "1.10"
ulid = "1.2.1"
linkme = "0.3.35"
mqtt5-conformance-macros = { version = "0.1.0", path = "../mqtt5-conformance-macros" }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect"] }
futures-util = "0.3"
http = "1.4.0"

[dev-dependencies]
tempfile = "3.25.0"
