[package]
name = "mqtt5-wasi"
version = "0.1.0"
edition.workspace = true
rust-version = "1.91"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MQTT v5.0 standalone WASI broker for wasmtime environments"
keywords = ["mqtt", "wasm", "wasi", "iot", "broker"]
categories = ["network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mqtt5-broker"
path = "src/bin/mqtt5-broker.rs"
required-features = []

[dependencies]
mqtt5-protocol = "0.12.0"
mqtt5 = { version = "0.31", default-features = false, features = ["tokio"] }

bytes = "1.10"
flume = "0.12.0"
tracing = "0.1"
getrandom = "0.3"

# tokio sync is needed because MessageRouter::register_client takes tokio::sync::oneshot::Sender
tokio = { version = "1.47", features = ["sync"] }

# WASI 0.2 async runtime: provides block_on, spawn, TcpListener, TcpStream, sleep,
# AsyncRead/AsyncWrite. Re-exported from this crate so consumers can drive their
# own async code on the same scheduler that powers the broker and client.
wstd = "0.6"
