[package]
name = "mqtt5"
version = "0.31.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Complete MQTT v5.0 platform with high-performance async client and full-featured broker supporting TCP, TLS, WebSocket, authentication, bridging, and resource monitoring"
documentation = "https://docs.rs/mqtt5"
readme = "README.md"
keywords = ["mqtt", "client", "messaging", "async", "broker"]
categories = ["network-programming", "asynchronous"]
exclude = [
    "CLAUDE.md",
    "mutants.out*/",
    "docker-compose.yml",
    "comparative_benchmarks/",
    "test_certs/",
    "scripts/",
    "docs/",
    "run_integration_tests.sh",
]

[features]
default = ["transport-websocket", "transport-quic"]
turmoil-testing = ["turmoil"]
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "tracing-subscriber",
]
opentelemetry_sdk = ["dep:opentelemetry_sdk"]
opentelemetry-otlp = ["dep:opentelemetry-otlp"]
tracing-opentelemetry = ["dep:tracing-opentelemetry"]
tokio = ["dep:tokio"]
transport-websocket = ["dep:tokio-tungstenite", "dep:futures-util"]
transport-quic = ["dep:quinn"]
codec-gzip = ["dep:flate2"]
codec-deflate = ["dep:flate2"]
codec-all = ["codec-gzip", "codec-deflate"]

[dev-dependencies]
tokio-test = "0.4"
ulid = "1.2.1"
proptest = "1.9.0"
serde_json = "1.0.142"
rand = "0.9.2"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0"
wasm-bindgen-test = "0.3"

url = "2.5.4"
tempfile = "3.12.0"

[[example]]
name = "simple_broker"
path = "examples/simple_broker.rs"

[[example]]
name = "broker_with_monitoring"
path = "examples/broker_with_monitoring.rs"

[[example]]
name = "broker_with_tls"
path = "examples/broker_with_tls.rs"

[[example]]
name = "broker_with_websocket"
path = "examples/broker_with_websocket.rs"
required-features = ["transport-websocket"]

[[example]]
name = "broker_all_transports"
path = "examples/broker_all_transports.rs"
required-features = ["transport-websocket", "transport-quic"]

[[example]]
name = "broker_bridge_demo"
path = "examples/broker_bridge_demo.rs"

[[example]]
name = "broker_with_opentelemetry"
path = "examples/broker_with_opentelemetry.rs"
required-features = ["opentelemetry"]

[lib]
name = "mqtt5"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O0"]

[dependencies]
base64 = "0.22"
bytes = "1.10"
futures = "0.3"
futures-util = { version = "0.3", optional = true }
hex = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
url = "2.5"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
turmoil = { version = "0.7", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["trace", "grpc-tonic", "metrics"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", features = ["metrics", "trace"], optional = true }
mqtt5-protocol = "0.12.0"
argon2 = "0.5"
getrandom = "0.3"
bebytes = { version = "3.0", features = ["bytes"] }
regex = "1.12.2"
flume = { version = "0.12.0", features = ["async"] }
parking_lot = "0.12.5"
flate2 = { version = "1.1.8", optional = true }
zeroize = "1.8.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "1.8.1", features = ["http1", "client"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "ring", "native-tokio", "tls12"] }
hyper-util = { version = "0.1.19", features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
http-body-util = "0.1.3"
http = "1.4.0"
humantime-serde = "1.1"
ring = "0.17.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
rustls-pki-types = "1.13.0"
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-native-roots"], optional = true }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio", "platform-verifier"], optional = true }
webpki-roots = "1.0"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
tokio = { version = "1.47", features = [
    "sync",
    "macros",
    "io-util",
    "time",
    "rt",
], optional = true }
