[package]
name = "mqttv5-cli"
version = "0.27.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Superior CLI tool for MQTT v5.0 - unified client and broker commands with ergonomic input design"
documentation = "https://docs.rs/mqttv5-cli"
readme = "README.md"
keywords = ["mqtt", "cli", "client", "broker", "iot"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "mqttv5"
path = "src/main.rs"

[features]
default = ["codec"]
opentelemetry = ["mqtt5/opentelemetry"]
codec = ["mqtt5/codec-all"]

[dependencies]
mqtt5 = "0.29"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
hex = "0.4.3"
getrandom = "0.3"
humantime = "2.3.0"
time = { version = "0.3.44", features = ["local-offset", "parsing", "formatting", "macros"] }
bebytes = "3.0.2"
flate2 = "1.1.9"
quinn = { version = "0.11.9", features = ["rustls-ring", "runtime-tokio"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
dialoguer = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.9"
rand = "0.9.2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rpassword = "7.4"
argon2 = "0.5"
